<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="200dp"
        android:text="@string/carrera" />

    <Button
        android:id="@+id/button2"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/horario" />

    <Button
        android:id="@+id/button3"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/calificaciones" />

    <Button
        android:id="@+id/button4"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:text="@string/faltas" />

</LinearLayout>