<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:id="@+id/nombre_materia_faltas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Large Text"
        android:textSize="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/parcial_1_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parcial1"
        		android:textSize="25dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/faltas_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Medium Text"
        		android:textSize="25dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/parcial_2_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parcial2"
        		android:textSize="25dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/faltas_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Medium Text"
        		android:textSize="25dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/parcial_3_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
        		android:textSize="25dp"
                android:text="@string/parcial3"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/faltas_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
        		android:textSize="25dp"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>